Rollback and info done